# docs/swagger.json
@@ -270,14 +270,14 @@
                     {
                         "type": "integer",
                         "description": "Тип сортировки (0 - название, 1 - рейтинг, 2 - дата выпуска)",
-                        "name": "sortType",
+                        "name": "sort",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Порядок сортировки (0 - возрастающий, 1 - убывающий)",
-                        "name": "sortOrder",
+                        "name": "order",
                         "in": "query"
                     }
                 ],
@@ -338,58 +338,6 @@
                         "description": "Объект нового фильма",
                         "schema": {
                             "$ref": "#/definitions/entities.Movie"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/apperrors.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/apperrors.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/apperrors.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/movies/search/": {
-            "post": {
-                "description": "Поиск фильма по строке\nСтрока ищется в названии фильма и списке актёров",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "movies"
-                ],
-                "summary": "Искать фильм",
-                "parameters": [
-                    {
-                        "description": "Поисковый запрос",
-                        "name": "searchQuery",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Список результатов",
-                        "schema": {
-                            "$ref": "#/definitions/entities.SearchResult"
                         }
                     },
                     "400": {
@@ -539,6 +487,59 @@
                         "description": "no response",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/search/movie/": {
+            "get": {
+                "description": "Поиск фильма по строке\nСтрока ищется в названии фильма и списке актёров",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movies"
+                ],
+                "summary": "Искать фильм",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Поисковый запрос",
+                        "name": "query",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список результатов",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.Movie"
+                            }
                         }
                     },
                     "400": {
@@ -727,23 +728,6 @@
                 },
                 "title": {
                     "type": "string"
-                }
-            }
-        },
-        "entities.SearchResult": {
-            "type": "object",
-            "properties": {
-                "actors": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.Actor"
-                    }
-                },
-                "movies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.Movie"
-                    }
                 }
             }
         }
